--- a/book/course-info/getting-started.ipynb
+++ b/book/course-info/getting-started.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "source": [
     "```{note}\n",
-    "If you are using cloud-based computing environments (i.e. Binder) to complete weekly assignments, they can be accessed from anywhere with any computer as long as we have a good internet connection. \n",
+    "If you are using cloud-based computing environments (i.e. Binder) to complete weekly assignments, they can be accessed from anywhere with any computer as long as you have a good internet connection. \n",
     "```"
    ]
   },
@@ -137,7 +137,7 @@
    "source": [
     "## Submit assignment\n",
     "\n",
-    "When we are finished with the assignment, we can download the notebook by clicking **File** --> **Download**. This file should be moved to your local course folder and submitte via Canvas. "
+    "When you are finished with the assignment, you can download the notebook by clicking **File** --> **Download**. This `.ipynb` file should be moved to your local course folder and submitted via Canvas."
    ]
   }
  ],
