--- a/book/demos/09b-demo.ipynb
+++ b/book/demos/09b-demo.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# Remote sensing in Python\n",
     "\n",
-    "In the second part of this week, we will use some of functions provided by `rasterio` to analyze some remote sensing imagery. The data we will be using is a **Landsat 8** image over Florence, OR acquired in July 2021. Future courses (e.g. GEOG485 Remote Sensing 1) will cover remote sensing in more detail but the main thing to understand here is that remote sesning data often contains **multiple files**. Each file represents a different **band** which represents the reflectance in a **specific wavelength** (e.g. red, green, or blue). Below are the band designations for Landsat 8. \n",
+    "In the second part of this week, we will use some of functions provided by `rasterio` to analyze remote sensing imagery. The data we will be using is a **Landsat 8** image over Florence, OR acquired in July 2021. Future courses (e.g. GEOG485: Remote Sensing 1) will cover remote sensing in more detail but the main thing to understand here is that remote sensing data often contains **multiple files**. Each file is a different **band** which represents the reflectance in a **specific wavelength** (e.g. red, green, or blue). Below are the band designations for Landsat 8. \n",
     "\n",
     "```{image} images/landsat_bands.jpg\n",
     ":alt: landsat 8 bands\n",
     ":class: bg-primary mb-1\n",
-    ":width: 500px\n",
+    ":width: 600px\n",
     ":align: center\n",
     "```"
    ]
@@ -167,7 +167,7 @@
     "So let's go ahead and read these two bands.\n",
     "\n",
     "```{caution}\n",
-    "Remember that, in Python, arrays are zero indexed, so the first band (i.e. 0) corresponds to band 1.\n",
+    "Remember that Python uses zero indexing, so the first band (i.e. 0) corresponds to band 1.\n",
     "```"
    ]
   },
@@ -458,7 +458,7 @@
    "id": "ac64c8dc",
    "metadata": {},
    "source": [
-    "One way of dealing with this is to **stretch** the image using a **percentile clip**. This techniuqes redistributes all pixel values between 0 and 255. In our case, all values of 0 will remain at 0, values of 123 will become 255, and the rest of the values will be spread proportionally in between. "
+    "One way of dealing with this is to **stretch** the image using a **percentile clip**. This technique redistributes all pixel values between 0 and 255. In our case, all values of 0 will remain at 0, values of 123 will become 255, and the rest of the values will be spread proportionally in between. "
    ]
   },
   {
