--- a/book/demos/10-demo.ipynb
+++ b/book/demos/10-demo.ipynb
@@ -23,7 +23,9 @@
    "id": "9dab2dc5",
    "metadata": {},
    "source": [
-    "## Sampling raster data with point file\n"
+    "## Sampling raster data with point file\n",
+    "\n",
+    "### Reproject to same coordinate system\n"
    ]
   },
   {
