--- a/book/demos/09a-demo.ipynb
+++ b/book/demos/09a-demo.ipynb
@@ -5,7 +5,7 @@
    "id": "7b7511e8",
    "metadata": {},
    "source": [
-    "# Raster analysis with `Rasterio`\n",
+    "# Raster data analysis\n",
     "\n",
     "Raster data represent a matrix of cells (or pixels) organized into rows and columns (or a grid). Grid cells can represent data that changes **continuously** across a landscape (surface) such as elevation, air temperature, or . reflectance data from satellite imaging platforms. Grid cells can also represent **discrete** data such as vegetation type or land cover. \n",
     "\n",
