--- a/book/demos/10b-demo.ipynb
+++ b/book/demos/10b-demo.ipynb
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "water_mask, transform = rasterio.mask.mask(src, water.geometry, invert=False, nodata=np.nan)"
+    "water_mask, transform = mask(src, water.geometry, invert=False, nodata=np.nan)"
    ]
   },
   {
