--- a/book/demos/09a-demo.ipynb
+++ b/book/demos/09a-demo.ipynb
@@ -23,7 +23,9 @@
    "id": "a462142a",
    "metadata": {},
    "source": [
-    "In this demo, we will be working with elevation data, also known as a Digital Elevation Model (DEM), of the Cascades Mountain Range that includes Mt. Rainier and Mt. Adams. The data is formatted as a `GeoTIFF` and we will open it using `rasterio` function, `open()`. This function take a **path string** and returns a **dataset object**."
+    "In this demo, we will be working with elevation data, also known as a Digital Elevation Model (DEM), of the Cascades Mountain Range that includes Mt. Rainier and Mt. Adams. \n",
+    "\n",
+    "The data is formatted as a `GeoTIFF` and we will open it using `rasterio` function, `open()`. This function take a **path string** and returns a **dataset object**."
    ]
   },
   {
